# MLOPS

./: .env  .pre-commit-config.yaml  cloudbuild.yaml  install.sh  requirements.txt
archive/: housing_estimation.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
k8s/: deployment.yaml  ingress.yaml
mlops/: .gitignore  README.md  pyproject.toml  requirements.txt  stats.json
mlops/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
mlops/catboost_info/learn/: events.out.tfevents
mlops/conf/base/: catalog.yml  parameters.yml
mlops/data/03_primary/: primary.csv
mlops/notebooks/: Projet_MLOPS_v2.ipynb
mlops/src/mlops/: __init__.py  __main__.py  housing_estimation.py  pipeline_registry.py
mlops/src/mlops/pipelines/global/: pipeline.py
mlops/src/mlops/pipelines/loading/: nodes.py  pipeline.py
mlops/src/mlops/pipelines/processing/: nodes.py  pipeline.py
mlops/src/mlops/pipelines/training/: nodes.py  pipeline.py
mlops/tests/: conftest.py  test_run.py
mlops/tests/loading/: test_load_csv_from_bucket.py
mlops/tests/pipelines/loading/: test_create_pipeline.py  test_load_csv_from_bucket.py
mlops/tests/pipelines/processing/: test_create_pipeline.py  test_utils.py
mlops/tests/pipelines/training/: test_create_pipeline.py  test_training.py
mlops/tests/processing/: test_nodes.py  test_utils.py
mlops/tests/training/: test_training.py
mlops/tmp/: primary.csv
